tests/machine/x/rust/record_assign.error
line 0: compile: exit status 1
error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/record_assign.rs:9:9
  |
9 |     inc(c);
  |     --- ^ expected `i32`, found `Counter`
  |     |
  |     arguments to this function are incorrect
  |
note: function defined here
 --> /workspace/mochi/tests/machine/x/rust/record_assign.rs:5:8
  |
5 |     fn inc(c: i32) -> i32 {
  |        ^^^ ------

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
 --> /workspace/mochi/tests/machine/x/rust/record_assign.rs:6:11
  |
6 |         c.n = c.n + 1;
  |           ^

error[E0610]: `i32` is a primitive type and therefore doesn't have fields
 --> /workspace/mochi/tests/machine/x/rust/record_assign.rs:6:17
  |
6 |         c.n = c.n + 1;
  |                 ^

error[E0308]: mismatched types
 --> /workspace/mochi/tests/machine/x/rust/record_assign.rs:5:23
  |
5 |     fn inc(c: i32) -> i32 {
  |        ---            ^^^ expected `i32`, found `()`
  |        |
  |        implicitly returns `()` as its body has no tail or `return` expression
  |
help: consider returning the local binding `c`
  |
6 ~         c.n = c.n + 1;
7 +         c
  |

error: aborting due to 4 previous errors

Some errors have detailed explanations: E0308, E0610.
For more information about an error, try `rustc --explain E0308`.

fn main() {
